--- a/deployment.yml
+++ b/deployment.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: nestjs-app
 spec:
-  replicas: 2
+  replicas: 4
   selector:
     matchLabels:
       app: nestjs-app
@@ -29,4 +29,8 @@ spec:
         ports:
         - name: http
           containerPort: 3000
-
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 0
+      maxSurge: 1
