--- a/.github/workflows/github-action-ci.yml
+++ b/.github/workflows/github-action-ci.yml
@@ -8,8 +8,6 @@ on:
     branches: 
     - main
 
-#name: AWS ECR push
-
 jobs:
   deploy:
     name: Deploy
@@ -50,5 +48,6 @@ jobs:
     
     - name: Deploy to EKS
       run: |
-        kubectl apply -f deployment.yml
+        #        kubectl apply -f deployment.yml
         kubectl apply -f service.yml
+        kubectl delete -f deployment.yml
