--- a/.github/workflows/github-action-ci.yml
+++ b/.github/workflows/github-action-ci.yml
@@ -48,6 +48,6 @@ jobs:
     
     - name: Deploy to EKS
       run: |
-        #        kubectl apply -f deployment.yml
+        kubectl apply -f deployment.yml
         kubectl apply -f service.yml
-        kubectl delete -f deployment.yml
+
